# injectors

./: .flake8  .gitignore  CONTRIBUTING.md  README.md  codecov.yml  renovate.json  run_test.sh
ai-redteam/: .env.sample  Dockerfile  README.md  docker-compose.yml  manifest-metadata.json  pyproject.toml
ai-redteam/ai_redteam/: __main__.py  config.yml.sample  detectors.py  marker.py  openaev_ai_redteam.py
ai-redteam/ai_redteam/configuration/: config_loader.py  injector_config_override.py
ai-redteam/ai_redteam/contracts/: ai_contracts.py  constants.py
ai-redteam/ai_redteam/engines/: __init__.py  base.py  garak.py  native.py  promptfoo.py  pyrit.py
ai-redteam/ai_redteam/targets/: llm_client.py  target_resolver.py
ai-redteam/docs/: CURATED_SCENARIOS.md
ai-redteam/test/: test_constants.py  test_contracts.py  test_converters.py  test_detectors.py  test_engines.py  test_injector.py  test_llm_client.py  test_marker.py  test_target_resolver.py
aws/: .env.sample  Dockerfile  README.md  config.yml.sample  docker-compose.yml  entrypoint.sh  manifest-metadata.json  pyproject.toml
aws/aws/: __init__.py  config.yml.sample  contracts_aws.py  openaev_aws.py
aws/aws/configuration/: config_loader.py  injector_config_override.py
aws/src/: contracts_aws.py  openaev_aws.py  openbas_aws.py  requirements.txt
aws/src/helpers/: pacu_executor.py
common/: constants.py  pagination.py  properties.py  pyproject.toml  targets.py
common/common/: constants.py  pagination.py  targets.py
common/injector_common/: pagination.py  targets.py
common/test/: test_common_targets.py
email/: .dockerignore  .env.sample  Dockerfile  README.md  config.yml.sample  docker-compose.yml  email-injector-findings.md  manifest-metadata.json  pyproject.toml
email-google-workspace/: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  config.yml.sample  docker-compose.yml  manifest-metadata.json  pyproject.toml
email-google-workspace/email_gws_injector/: contracts_email_gws.py  openaev_email_gws.py
email-google-workspace/email_gws_injector/client/: gmail_client.py
email-google-workspace/email_gws_injector/configuration/: config_loader.py  gws_config.py  injector_config_override.py
email-google-workspace/email_gws_injector/helpers/: email_helper.py
email-google-workspace/test/: test_contracts.py  test_gmail_client.py  test_helpers.py  test_injector.py
email-m365/: .env.sample  Dockerfile  README.md  config.yml.sample  docker-compose.yml  manifest-metadata.json  pyproject.toml
email-m365/email_m365_injector/: contracts_email_m365.py  openaev_email_m365.py
email-m365/test/: test_contracts.py  test_helpers.py  test_injector.py  test_m365_client.py
email-smtp/: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  config.yml.sample  docker-compose.yml  manifest-metadata.json  pyproject.toml
email-smtp/email_smtp/: __main__.py
email-smtp/email_smtp_injector/: contracts_email.py  openaev_email_smtp.py
email-smtp/test/: test_email_client.py  test_email_helper.py  test_injector.py
email-smtp/tests/: conftest.py
email/email_injector/: contracts_email.py  openaev_email.py
email/test/: test_email_client.py  test_email_helper.py
exfiltration/: .env.sample  Dockerfile  README.md  config.yml.sample  docker-compose.yml  manifest-metadata.json  pyproject.toml
exfiltration/exfiltration_injector/: __init__.py  contracts_exfiltration.py  openaev_exfiltration.py
exfiltration/test/: test_exfiltration.py  test_injector.py
gcp/: .env.sample  Dockerfile  README.md  config.yml.sample  docker-compose.yml  manifest-metadata.json  pyproject.toml
gcp/gcp_injector/: __init__.py  contracts_gcp.py  openaev_gcp.py
gcp/test/: test_gcp.py  test_injector.py
http-query/: .env.sample  Dockerfile  README.md  config.yml.sample  docker-compose.yml  entrypoint.sh  manifest-metadata.json  pyproject.toml
http-query/http_query/: config.yml.sample  contracts_http.py  openaev_http.py
http-query/src/: contracts_http.py  openaev_http.py  openbas_http.py  requirements.txt
injector_common/: pyproject.toml
injector_common/injector_common/: constants.py  data_helpers.py  dump_config.py  pagination.py  stratus_executor.py  targets.py  traces.py
injector_common/test/: test_common_targets.py  test_stratus_executor.py  test_traces.py
injectors-sdk/: .gitignore  README.md  pyproject.toml
injectors-sdk/docs/: base-injector.md  cli-engine.md
injectors-sdk/injectors_sdk/: __init__.py
injectors-second-sdk/: README.md  pyproject.toml
injectors-second-sdk/docs/: base-injector.md  cli-engine.md
injectors-second-sdk/injectors_second_sdk/: __init__.py
netexec/: .env.sample  .gitignore  Dockerfile  README.md  config.yml.sample  docker-compose.yml  manifest-metadata.json  pyproject.toml
netexec/netexec/: contracts_netexec.py  modules_registry.py  openaev_netexec.py
netexec/test/: conftest.py
nmap/: .dockerignore  .env.sample  Dockerfile  README.md  config.yml.sample  docker-compose.yml  entrypoint2.sh  manifest-metadata.json  pyproject.toml  requirements.txt
nmap/nmap/: config.yml.sample  openaev_nmap.py
nmap/src/: constants_nmap.py  contracts_nmap.py  openaev_nmap.py  openbas_nmap.py  requirements.txt
nmap/test/: test_openaev_nmap.py
nuclei/: .env.sample  Dockerfile  README.md  config.yml.sample  docker-compose.yml  manifest-metadata.json  pyproject.toml  requirements.txt
nuclei/nuclei/: config.yml.sample  openaev_nuclei.py  openbas_nuclei.py
nuclei/test/: test_openaev_nuclei.py
shodan/: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  config.yml.sample  docker-compose.yml  manifest-metadata.json  pyproject.toml  requirements.txt
shodan/shodan/: .env.sample  __init__.py  __main__.py  config.yml.sample
shodan/tests/: conftest.py
teams/: .env.sample  Dockerfile  README.md  config.yml.sample  docker-compose.yml  manifest-metadata.json  pyproject.toml
teams/teams/: config.yml.sample  contracts_teams.py  openaev_teams.py
teams/test/: test_contracts.py  test_graph_auth.py  test_helpers.py  test_injector.py  test_teams_client.py
(+442 files in other folders)
