[tool.poetry]
name = "openaev-aws-injector"
version = "2.1.3"
description = "An injector for impacting AWS"
authors = ["Filigran <contact@filigran.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "aws" }
]


[tool.poetry.dependencies]
python = "^3.11"
pyoaev = [
    { markers = "extra == 'prod' and extra != 'dev'", version = "2.1.3", source = "pypi"  },
    { markers = "extra == 'dev' and extra != 'prod'", path = "../../client-python", develop = true },
]
pacu = "^1.5.0"
awscli = "^1.29.0"
injector_common = { path = "../injector_common", develop = true }

[tool.poetry.extras]
prod = ["pyoaev"]
dev = ["pyoaev"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_local_folder = ["aws"]

[tool.cmw]
install-command = "poetry install --extras prod"
config-dump-command = "poetry run python -m aws.openaev_aws --dump-config-schema"
icon-path = "aws/img/icon-aws.png"
