[project]
name = "openaev-aws-injector"
version = "2.1.6"
description = "An injector for impacting AWS"
dependencies = [
    "pyoaev (==2.1.6) ; extra != 'dev'",
    "injector_common @ ../injector_common",
]

[project.optional-dependencies]
dev = [
    "pyoaev @ ../../client-python",
]

[tool.poetry]
authors = ["Filigran <contact@filigran.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "aws" }
]

[tool.poetry.dependencies]
python = "^3.11"
pyoaev = [
    { markers = "extra != 'dev'", source = "pypi" },
    { markers = "extra == 'dev'", develop = true },
]
pacu = "^1.5.0"
awscli = "^1.29.0"
injector_common = { develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_local_folder = ["aws"]

[tool.cmw]
install-command = "poetry install --extras dev"
config-dump-command = "poetry run python -m aws.openaev_aws --dump-config-schema"
icon-path = "aws/img/icon-aws.png"
