[project]
name = "openaev-aws-injector"
version = "2.1.8"
description = "An injector for impacting AWS"
license = "Apache-2.0"
readme = "README.md"
authors = [
    { name = "Filigran", email = "contact@filigran.io" },
]
requires-python = ">=3.11,<4.0"

dependencies = [
    "pyoaev (==2.1.6); extra != 'dev'",
    "injector_common @ ../injector_common",
    "pacu~=1.5.0",
    "awscli~=1.29.0",
]

[project.optional-dependencies]
dev = [
    "pyoaev @ ../../client-python",
]

[tool.poetry]
packages = [
    { include = "aws" }
]

[tool.poetry.dependencies]
pyoaev = [
    { markers = "extra != 'dev'", source = "PyPI" },
    { markers = "extra == 'dev'", develop = true },
]
injector_common = { develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_local_folder = ["aws"]

[tool.cmw]
install-command = "poetry install"
config-dump-command = "poetry run python -m aws.openaev_aws --dump-config-schema"
icon-path = "aws/img/icon-aws.png"
