[project]
name = "injector-common"
dynamic = ["version"]
description = "Python library for injectors OpenAEV."
authors = [
    {name = "Filigran", email = "contact@filigran.io"}
]
maintainers = [
    {name = "Filigran", email = "contact@filigran.io"}
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
known_local_folder = ["common"]

[tool.setuptools.packages.find]
where = ["."]
include = ["common*"]