[project]
name = "openaev-email-m365-injector"
version = "2.260719.0"
description = "An injector for sending emails through Microsoft 365 (Microsoft Graph API)"
readme = "README.md"
authors = [
    { name = "Filigran", email = "contact@filigran.io" },
]
license = "Apache-2.0"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pyoaev (==2.260717.0); extra != 'dev'",
    "injector_common @ ../injector_common",
    "requests~=2.33",
    "msal~=1.31",
]

[project.optional-dependencies]
dev = [
    "pyoaev @ ../../client-python",
    "black (>=26.3.1,<26.4.0)",
    "isort (>=8.0.1,<8.1.0)",
    "ruff~=0.14.2",
    "mypy~=1.18.2",
    "types-requests~=2.32",
    "coverage>=7.13.5",
    "pytest (>=9.0.0,<9.1.0)",
]

[tool.poetry]
packages = [
    { include = "email_m365_injector" },
]

[tool.poetry.dependencies]
pyoaev = [
    { markers = "extra != 'dev'", source = "PyPI" },
    { markers = "extra == 'dev'", develop = true },
]

[tool.poetry.dependencies.injector_common]
develop = true

[tool.isort]
profile = "black"
known_local_folder = [
    "email_m365_injector",
]

[tool.cmw]
install-command = "poetry install"
config-dump-command = "poetry run python -m email_m365_injector.openaev_email_m365 --dump-config-schema"
icon-path = "email_m365_injector/img/icon-email-m365.png"

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"
