[project]
name = "openaev-email-smtp-injector"
version = "2.260719.0"
description = "An injector for crafting emails"
readme = "README.md"
authors = [{ name = "Filigran", email = "contact@filigran.io" }]
license = "Apache-2.0"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pyoaev (==2.260717.0); extra != 'dev'",
    "injector_common @ ../injector_common",
    "pydantic (>=2.11.3,<2.14.0)",
    "pydantic-settings (>=2.11.0,<2.15.0)",
    "ioc-finder>=9.4.1",
]

[project.urls]
Homepage = "https://filigran.io/"
Repository = "https://github.com/OpenAEV-Platform/injectors/tree/main/email-smtp"
Documentation = "https://github.com/OpenAEV-Platform/injectors/tree/main/email-smtp/README.md"
Issues = "https://github.com/OpenAEV-Platform/injectors/issues"

[project.scripts]
EmailSmtpInjector = "email_smtp.__main__:main"

[project.optional-dependencies]
dev = [
    "pyoaev @ ../../client-python",
    "black (>=26.3.1,<26.4.0)",
    "isort (>=8.0.1,<8.1.0)",
    "ruff~=0.15.20",
    "ty~=0.0.56",
    "coverage>=7.13.5",
    "pytest (>=9.0.3,<9.1.1)",
]

[tool.poetry]
packages = [
    { include = "email_smtp" }
]

[tool.poetry.dependencies]
pyoaev = [
    { markers = "extra != 'dev'", source = "PyPI" },
    { markers = "extra == 'dev'", develop = true },
]
injector_common = { develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["email_smtp", "tests"]

[tool.pytest.ini_options]
testpaths = ["./tests"]

[tool.cmw]
install-command = "poetry install"
config-dump-command = "poetry run python -m email_smtp --dump-config-schema"
icon-path = "email_smtp/img/icon-email.png"
