[project]
name = "openaev-email-injector"
version = "2.260707.0"
description = "An injector for crafting emails"
readme = "README.md"
authors = [{ name = "Filigran", email = "contact@filigran.io" }]
license = "Apache-2.0"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pyoaev (==2.260704.0); extra != 'dev'",
    "injector_common @ ../injector_common",
]

[project.optional-dependencies]
dev = [
    "pyoaev @ ../../client-python",
    "black (>=26.3.1,<26.4.0)",
    "isort (>=8.0.1,<8.1.0)",
    "ruff~=0.15.20",
    "ty~=0.0.56",
    "coverage>=7.13.5",
    "pytest (>=9.0.3,<9.1.1)",
]

[tool.poetry]
packages = [
    { include = "email_injector" }
]

[tool.poetry.dependencies]
pyoaev = [
    { markers = "extra != 'dev'", source = "PyPI" },
    { markers = "extra == 'dev'", develop = true },
]
injector_common = { develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_local_folder = ["email_injector"]

[tool.cmw]
install-command = "poetry install"
config-dump-command = "poetry run python -m email_injector.openaev_email --dump-config-schema"
icon-path = "email_injector/img/icon-email.png"
