[tool.poetry]
name = "openaev-http-query-injector"
version = "2.0.9"
description = "An injector for executing arbitrary http requests"
authors = ["Filigran <contact@filigran.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "http_query" }
]


[tool.poetry.dependencies]
python = "^3.11"
pyoaev = [
    { markers = "extra == 'prod' and extra != 'dev'", version = "2.0.9", source = "pypi"  },
    { markers = "extra == 'dev' and extra != 'prod'", path = "../../client-python", develop = true },
]
injector_common = { path = "../injector_common", develop = true }

[tool.poetry.extras]
prod = ["pyoaev"]
dev = ["pyoaev"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_local_folder = ["http_query"]

[tool.cmw]
install-command = "poetry install --extras prod"
config-dump-command = "poetry run python -m http_query.openaev_http --dump-config-schema"
icon-path = "http_query/img/icon-http.png"
