[project]
name = "openaev-http-query-injector"
version = "2.0.14"
description = "An injector for executing arbitrary http requests"
dependencies = [
    "pyoaev (==2.0.14) ; extra != 'dev'",
    "injector_common @ ../injector_common",
]

[project.optional-dependencies]
dev = [
    "pyoaev @ ../../client-python",
]
 
[tool.poetry]
authors = ["Filigran <contact@filigran.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "http_query" }
]

[tool.poetry.dependencies]
python = "^3.11"
pyoaev = [
    { markers = "extra != 'dev'", source = "pypi" },
    { markers = "extra == 'dev'", develop = true },
]
injector_common = { develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_local_folder = ["http_query"]

[tool.cmw]
install-command = "poetry install --extras dev"
config-dump-command = "poetry run python -m http_query.openaev_http --dump-config-schema"
icon-path = "http_query/img/icon-http.png"
