[project]
name = "openaev-http-query-injector"
version = "2.1.6"
description = "An injector for executing arbitrary http requests"
license = "Apache-2.0"
readme = "README.md"
authors = [
    { name = "Filigran", email = "contact@filigran.io" },
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "pyoaev (==2.1.6); extra != 'dev'",
    "injector_common @ ../injector_common",
]

[project.optional-dependencies]
dev = [
    "pyoaev @ ../../client-python",
]

[tool.poetry]
packages = [
    { include = "http_query" }
]

[tool.poetry.dependencies]
pyoaev = [
    { markers = "extra == 'dev'", develop = true },
]
injector_common = { develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_local_folder = ["http_query"]

[tool.cmw]
install-command = "poetry install"
config-dump-command = "poetry run python -m http_query.openaev_http --dump-config-schema"
icon-path = "http_query/img/icon-http.png"
