[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "injectors-second-sdk"
version = "0.1.0"
description = "OpenAEV Injectors SDK (DDD + Light Hex Architecture) — CLI Engine and extension base classes"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0,<3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["injectors_second_sdk"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["injectors_second_sdk"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
source = ["injectors_second_sdk"]
