[project]
name = "openaev-netexec-injector"
version = "2.1.7"
description = "An injector for network execution and credential testing with NetExec"
license = "Apache-2.0"
readme = "README.md"
authors = [
    { name = "Filigran", email = "contact@filigran.io" },
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "pyoaev (==2.260601.0); extra != 'dev'",
    "injector_common @ ../injector_common",
]

[project.optional-dependencies]
dev = [
    "pyoaev @ ../../client-python",
    "black~=25.1",          # Code formatter
    "isort~=7.0.0",         # Import sorter
    "ruff~=0.14.2",         # linter
    "mypy~=1.18.2",         # Type validator
    "pip_audit~=2.9.0",     # Security checker
    "pre-commit~=4.3.0",    # Git hooks
    "types-PyYAML~=6.0.12", # stubs for untyped module
    "pytest~=8.4.1",
    "polyfactory~=2.22.2",
]

[tool.poetry]
packages = [
    { include = "netexec" }
]

[tool.poetry.dependencies]
pyoaev = [
    { markers = "extra != 'dev'", source = "PyPI" },
    { markers = "extra == 'dev'", develop = true },
]
injector_common = { develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools.package-data]
netexec = ["img/*.png"]

[tool.isort]
profile = "black"
known_local_folder = ["netexec"]

[tool.cmw]
install-command = "poetry install"
config-dump-command = "poetry run python -m netexec.openaev_netexec --dump-config-schema"
icon-path = "netexec/img/icon-netexec.png"
