[project]
name = "openaev-nmap-injector"
version = "2.1.6"
description = "An injector for running port scans with nmap"
dependencies = [
    "pyoaev (==2.1.6) ; extra != 'dev'",
    "injector_common @ ../injector_common",
]

[project.optional-dependencies]
dev = [
    "pyoaev @ ../../client-python",
]

[tool.poetry]
authors = ["Filigran <contact@filigran.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "nmap" }
]

[tool.poetry.dependencies]
python = "^3.11"
pyoaev = [
    { markers = "extra != 'dev'", source = "pypi" },
    { markers = "extra == 'dev'", develop = true },
]
injector_common = { develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_local_folder = ["nmap"]

[tool.cmw]
install-command = "poetry install --extras dev"
config-dump-command = "poetry run python -m nmap.openaev_nmap --dump-config-schema"
icon-path = "nmap/img/icon-nmap.png"
