[project]
name = "openaev-nmap-injector"
version = "2.1.6"
description = "An injector for running port scans with nmap"
license = "Apache-2.0"
readme = "README.md"
authors = [
    { name = "Filigran", email = "contact@filigran.io" },
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "pyoaev (==2.1.6); extra != 'dev'",
    "injector_common @ ../injector_common",
]

[project.optional-dependencies]
dev = [
    "pyoaev @ ../../client-python",
]

[tool.poetry]
packages = [
    { include = "nmap" }
]

[tool.poetry.dependencies]
pyoaev = [
    { markers = "extra == 'dev'", develop = true },
]
injector_common = { develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_local_folder = ["nmap"]

[tool.cmw]
install-command = "poetry install --extras dev"
config-dump-command = "poetry run python -m nmap.openaev_nmap --dump-config-schema"
icon-path = "nmap/img/icon-nmap.png"
