[project]
name = "openaev-nuclei-injector"
version = "2.0.14"
description = "An injector for running vulnerability scans with Nuclei"
dependencies = [
    "pyoaev (==2.0.14) ; extra != 'dev'",
]

[project.optional-dependencies]
dev = [
    "pyoaev @ ../../client-python",
]

[tool.poetry]
authors = ["Filigran <contact@filigran.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "nuclei" }
]

[tool.poetry.dependencies]
python = "^3.11"
pyoaev = [
    { markers = "extra == 'dev'", develop = true },
]
injector_common = { path = "../injector_common", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_local_folder = ["nuclei"]

[tool.cmw]
install-command = "poetry install --extras dev"
config-dump-command = "poetry run python -m nuclei.openaev_nuclei --dump-config-schema"
icon-path = "nuclei/img/nuclei.jpg"
