[project]
name = "openaev-nuclei-injector"
version = "2.1.6"
description = "An injector for running vulnerability scans with Nuclei"
license = "Apache-2.0"
readme = "README.md"
authors = [
    { name = "Filigran", email = "contact@filigran.io" },
]
requires-python = ">=3.11,<4.0"

dependencies = [
    "pyoaev (==2.1.6) ; extra != 'dev'",
    "injector_common @ ../injector_common",
]

[project.optional-dependencies]
dev = [
    "pyoaev @ ../../client-python",
]

[tool.poetry]
packages = [
    { include = "nuclei" }
]

[tool.poetry.dependencies]
pyoaev = [
    { markers = "extra == 'dev'", develop = true },
]
injector_common = { develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_local_folder = ["nuclei"]

[tool.cmw]
install-command = "poetry install --extras dev"
config-dump-command = "poetry run python -m nuclei.openaev_nuclei --dump-config-schema"
icon-path = "nuclei/img/nuclei.jpg"
