[project]
name = "openaev-shodan-injector"
version = "2.1.6"
description = "An injector for running with Shodan"
readme = "README.md"
authors = [{ name = "Filigran", email = "contact@filigran.io" }]
license = "Apache-2.0"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pyoaev (==2.1.6); extra != 'dev'",
    "injector_common @ ../injector_common",
    "pydantic~=2.11.7",
    "pydantic-settings~=2.11.0",
    "requests~=2.32.5",
    "limiter==0.5.0",
    "tenacity~=9.1.2",
    "rich~=14.2.0",
]

[project.urls]
Homepage = "https://filigran.io/"
Repository = "https://github.com/OpenAEV-Platform/injectors/tree/main/shodan"
Documentation = "https://github.com/OpenAEV-Platform/injectors/tree/main/shodan/README.md"
Issues = "https://github.com/OpenAEV-Platform/injectors/issues"

[project.scripts]
ShodanInjector = "shodan.__main__:main"

[project.optional-dependencies]
dev = [
    "pyoaev @ ../../client-python",
    "black~=25.1",          # Code formatter
    "isort~=7.0.0",         # Import sorter
    "ruff~=0.14.2",         # linter
    "mypy~=1.18.2",         # Type validator
    "pip_audit~=2.9.0",     # Security checker
    "pre-commit~=4.3.0",    # Git hooks
    "types-PyYAML~=6.0.12", # stubs for untyped module
    "pytest~=8.4.1",
    "polyfactory~=2.22.2",
]

[tool.poetry]
packages = [
    { include = "shodan" }
]

[tool.poetry.dependencies]
pyoaev = [
    { markers = "extra != 'dev'", source = "PyPI" },
    { markers = "extra == 'dev'", develop = true },
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["shodan"]

[tool.pytest.ini_options]
testpaths = ["./tests"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

target-version = "py312"

[tool.ruff.lint]
# Never enforce `I001` (unsorted import). Already handle with isort
# Never enforce `E501` (line length violations). Already handle with black
# Never enforce `F821` (Undefined name `null`). incorrect issue with notebook
# Never enforce `D213` (Multi-line docstring summary should start at the second line) conflict with our docstring convention
# Never enforce `D211` (NoBlankLinesBeforeClass)`
# Never enforce `G004` (logging-f-string) Logging statement uses f-string
# Never enforce `TRY003`() Avoid specifying long messages outside the exception class not useful
# Never enforce `D104` (Missing docstring in public package)
# Never enforce `D407` (Missing dashed underline after section)
# Never enforce `D408` (Section underline should be in the line following the section’s name)
# Never enforce `D409` (Section underline should match the length of its name)
ignore = [
    "I001",
    "D203",
    "E501",
    "F821",
    "D205",
    "D213",
    "D211",
    "G004",
    "TRY003",
    "D104",
    "D407",
    "D408",
    "D409",
]
select = ["E", "F", "W", "D", "G", "T", "B", "C", "N", "I", "S"]

[tool.mypy]
strict = true
exclude = [
    '^tests',
    '^docs',
    '^build',
    '^dist',
    '^venv',
    '^site-packages',
    '^__pypackages__',
    '^.venv',
]
plugins = ["pydantic.mypy"]

[tool.cmw]
install-command = "poetry install"
config-dump-command = "poetry run python -m shodan --dump-config-schema"
icon-path = "shodan/img/icon-shodan.png"
