[project]
name = "openaev-shodan-injector"
version = "2.260703.1"
description = "An injector for running with Shodan"
readme = "README.md"
authors = [
    { name = "Filigran", email = "contact@filigran.io" },
]
license = "Apache-2.0"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pyoaev (==2.260703.1); extra != 'dev'",
    "injector_common @ ../injector_common",
    "pydantic (>=2.11.3,<2.14.0)",
    "pydantic-settings (>=2.11.0,<2.15.0)",
    "requests~=2.33",
    "limiter==0.5.0",
    "tenacity~=9.1.2",
    "rich~=14.2.0",
]

[project.urls]
Homepage = "https://filigran.io/"
Repository = "https://github.com/OpenAEV-Platform/injectors/tree/main/shodan"
Documentation = "https://github.com/OpenAEV-Platform/injectors/tree/main/shodan/README.md"
Issues = "https://github.com/OpenAEV-Platform/injectors/issues"

[project.scripts]
ShodanInjector = "shodan.__main__:main"

[project.optional-dependencies]
dev = [
    "pyoaev @ ../../client-python",
    "black (>=26.3.1,<26.4.0)",
    "isort (>=8.0.1,<8.1.0)",
    "ruff~=0.14.2",
    "mypy~=1.18.2",
    "pip_audit~=2.9.0",
    "pre-commit (>=4.6.0,<4.7.0)",
    "types-PyYAML~=6.0.12",
    "coverage>=7.13.5",
    "pytest (>=9.0.0,<9.1.0)",
    "polyfactory~=2.22.2",
]

[tool.poetry]
packages = [
    { include = "shodan" },
]

[tool.poetry.dependencies]
pyoaev = [
    { markers = "extra != 'dev'", source = "PyPI" },
    { markers = "extra == 'dev'", develop = true },
]

[tool.isort]
profile = "black"
src_paths = [
    "shodan",
]

[tool.pytest.ini_options]
testpaths = [
    "./tests",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
target-version = "py312"

[tool.ruff.lint]
ignore = [
    "I001",
    "D203",
    "E501",
    "F821",
    "D205",
    "D213",
    "D211",
    "G004",
    "TRY003",
    "D104",
    "D407",
    "D408",
    "D409",
]
select = [
    "E",
    "F",
    "W",
    "D",
    "G",
    "T",
    "B",
    "C",
    "N",
    "I",
    "S",
]

[tool.mypy]
strict = true
exclude = [
    "^tests",
    "^docs",
    "^build",
    "^dist",
    "^venv",
    "^site-packages",
    "^__pypackages__",
    "^.venv",
]
plugins = [
    "pydantic.mypy",
]

[tool.cmw]
install-command = "poetry install"
config-dump-command = "poetry run python -m shodan --dump-config-schema"
icon-path = "shodan/img/icon-shodan.png"

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"
